# EzeLLM_

./: .gitignore  README.md  model_222221.pt  pipeline.py  requirements.txt
Optimization/: README.md  benchmark.py  export_safetensors.py  kv_cache.py  new.md  quantize.py  report.tex  requirements.txt  run_all.py  verify_kv_cache.py
Optimization/rust-inference/: Cargo.toml  README.md  build.sh
Optimization/rust-inference/src/: attention.rs  cache.rs  config.rs  lm_head.rs  main.rs  mlp.rs  model.rs  rope.rs  sampling.rs
base/: dev.py  ezellm.py
config/: config.toml
datasets/: download_cosmopediav2.sh  verify_cosmopediav2.py
dev/: ezellm.py  get_model.py  pipeline.py
