[package]
name = "ezellm-rs"
version = "0.1.0"
edition = "2021"
description = "Native Rust inference engine for EzeLLM"

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-flash-attn = { version = "0.9", optional = true }
safetensors = "0.4"
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.9"

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
flash-attn = ["cuda", "dep:candle-flash-attn"]
metal = ["candle-core/metal", "candle-nn/metal"]
mkl = ["candle-core/mkl"]
accelerate = ["candle-core/accelerate"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
